my fourth commit

--- a/src/app/resources/css/customStyle.scss
+++ b/src/app/resources/css/customStyle.scss
@@ -104,6 +104,9 @@ body {
     .checkbox:active ~ .slider::before {
         transform: translate(0);
     }
+    .text-green {
+        color: $green;
+    }
 }
 
 #logo {
