my fifth commit

--- a/src/app/resources/css/formWizard.scss
+++ b/src/app/resources/css/formWizard.scss
@@ -45,6 +45,7 @@
                         transform: scale(1.1, 1.1);
                         .index {
                             margin-top: -1rem;
+                            margin-bottom: .5rem;
                             font-size: 1.2rem;
                             padding: 1.25rem;
                             color: black;
