my sixth commit

--- a/src/app/resources/css/formWizard.scss
+++ b/src/app/resources/css/formWizard.scss
@@ -60,6 +60,7 @@
             }
         }
         .start-gradient, .end-gradient {
+            pointer-events: none;
             position: absolute;
             z-index: 3;
             top: 0;
