--- a/src/app/resources/css/modal.scss
+++ b/src/app/resources/css/modal.scss
@@ -10,3 +10,9 @@
     border-radius: .5rem;
     padding: 3rem;
 }
+.MuiAutocomplete-listbox {
+    z-index: 10000;
+}
+.MuiModal-backdrop {
+    background-color: rgba(54, 54, 54, .3);
+}
