last reforms at Tuesday  07-25-2023 12:15

--- a/src/app/resources/css/formWizard.scss
+++ b/src/app/resources/css/formWizard.scss
@@ -172,6 +172,7 @@
     width: 100%;
     overflow: hidden;
     line-height: 0;
+    opacity: .5;
     svg {
         position: relative;
         display: block;
