--- a/src/app/resources/css/customStyle.scss
+++ b/src/app/resources/css/customStyle.scss
@@ -22,6 +22,11 @@ body {
             }
         }
     }
+    .break-word {
+        a {
+            word-break: break-word;
+        }
+    }
     .fs-7 {
         font-size: .8rem;
     }
@@ -152,25 +157,18 @@ body {
         color: $green;
     }
 
-    .MuiBox-root {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 600px;
-        max-height: 75%;
-        overflow: auto;
-        background-color: white;
-        border-radius: .5rem;
-        padding: 3rem;
-    }
-
     .MuiAutocomplete-listbox {
         z-index: 10000;
     }
     
     .MuiModal-backdrop {
         background-color: rgba(54, 54, 54, .3);
+    }
+    .MuiPaper-root {
+        box-shadow: none;
+    }
+    .z-index-1050 {
+        z-index: 11000;
     }
 }
 
