last reforms at Monday  08-09-2023 11:54

--- a/src/app/resources/css/_variables.scss
+++ b/src/app/resources/css/_variables.scss
@@ -1,4 +1,4 @@
-$green: #22a455;
+$mainColor: #559399;
 $shadow: .3rem .3rem .6rem var(--greyLight-2), 
 -.2rem -.2rem .5rem var(--white);
 $inner-shadow: inset .2rem .2rem .5rem var(--greyLight-2), 
