--- a/src/app/resources/css/customStyle.scss
+++ b/src/app/resources/css/customStyle.scss
@@ -9,8 +9,8 @@ body {
         color: inherit;
     }
     h1 {
-        color: darken($green, 20%);
-        text-shadow: 1px 1px 0 lighten($green, 5%);
+        color: darken($mainColor, 20%);
+        text-shadow: 1px 1px 0 lighten($mainColor, 5%);
     }
     p {
         margin-bottom: 0;
@@ -38,8 +38,8 @@ body {
         width: 100%;
         height: 100%;
         min-height: 100vh;
-        background-color: $green;
-        border-top: 2px solid darken($green, 15%);
+        background-color: $mainColor;
+        border-top: 2px solid darken($mainColor, 15%);
         box-shadow: 0 0 6px rgba(34, 34, 34, .5);
         &.blurred {
             filter: blur(7.5px);
@@ -71,7 +71,7 @@ body {
     }
     
     .text-shadow {
-        text-shadow: 1px 1px 0 lighten($green, 5%);
+        text-shadow: 1px 1px 0 lighten($mainColor, 5%);
     }
     
     .text-shadow-white {
@@ -154,7 +154,7 @@ body {
     }
 
     .text-green {
-        color: $green;
+        color: $mainColor;
     }
 
     .MuiAutocomplete-listbox {
@@ -166,6 +166,10 @@ body {
     }
     .MuiPaper-root {
         box-shadow: none;
+    }
+    .z-index-2 {
+        position: relative;
+        z-index: 2;
     }
     .z-index-1050 {
         z-index: 11000;
