--- a/src/app/resources/css/_animations.scss
+++ b/src/app/resources/css/_animations.scss
@@ -38,3 +38,11 @@
       transform: translate3d(85px,0,0);
     }
 }
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
