last reforms at Saturday  08-16-2023 14:00

--- a/src/app/resources/css/customStyle.scss
+++ b/src/app/resources/css/customStyle.scss
@@ -22,6 +22,13 @@ body {
             }
         }
     }
+    .read-only {
+        .MuiInput-root, .MuiAutocomplete-root {
+            opacity: .5;
+            cursor: pointer;
+            pointer-events: none;
+        }
+    }
     .break-word {
         a {
             word-break: break-word;
