--- a/src/app/resources/css/_animations.scss
+++ b/src/app/resources/css/_animations.scss
@@ -46,3 +46,18 @@
         transform: rotate(360deg);
     }
 }
+@keyframes fadeInRight {
+    0% {
+        transform: translateX(-25%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    
+}
+@keyframes drift {
+    from { transform: rotate(0deg); }
+    from { transform: rotate(360deg); }
+}
