--- a/src/app/resources/css/customStyle.scss
+++ b/src/app/resources/css/customStyle.scss
@@ -1,5 +1,4 @@
 @import '_variables.scss';
-
 body {
     padding: 0 !important;
     position: relative;
@@ -7,6 +6,15 @@ body {
     a {
         text-decoration: none;
         color: inherit;
+        &.light {
+            color: saturate($lightBlue, 50%);
+            &:hover {
+                color: lighten(saturate($lightBlue, 50%), 15%);
+            }
+        }
+    }
+    footer {
+        bottom: 0;
     }
     h1 {
         color: darken($mainColor, 20%);
@@ -23,20 +31,20 @@ body {
         }
     }
     .btn-primary {
-        --bs-btn-color: #fff !important;
-        --bs-btn-bg: #0d6efd !important;
-        --bs-btn-border-color: #0d6efd !important;
-        --bs-btn-hover-color: #fff;
-        --bs-btn-hover-bg: #0b5ed7;
-        --bs-btn-hover-border-color: #0a58ca !important;
+        --bs-btn-color: #2e4934 !important;
+        --bs-btn-bg: #81F499 !important;
+        --bs-btn-border-color: #81F499 !important;
+        --bs-btn-hover-color: #528b5f;
+        --bs-btn-hover-bg: #92ffaa;
+        --bs-btn-hover-border-color: #92ffaa !important;
         --bs-btn-focus-shadow-rgb: 49,132,253;
         --bs-btn-active-color: #fff;
-        --bs-btn-active-bg: #0a58ca;
-        --bs-btn-active-border-color: #0a53be;
+        --bs-btn-active-bg: #92ffaa;
+        --bs-btn-active-border-color: #7ee494;
         --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
         --bs-btn-disabled-color: #fff;
-        --bs-btn-disabled-bg: #0d6efd;
-        --bs-btn-disabled-border-color: #0d6efd;
+        --bs-btn-disabled-bg: #81F499;
+        --bs-btn-disabled-border-color: #81F499;
     }
     .btn {
         --bs-btn-padding-x: 0.75rem;
@@ -78,6 +86,12 @@ body {
             border-color: var(--bs-btn-hover-border-color);
         }
     }
+    .text-blue-light {
+        color: $lightBlue;
+    }
+    .box-shadow {
+        box-shadow: 1px 1px 3px rgba( darken($mainColor, 20%), .5 );
+    }
     .read-only {
         .MuiInput-root, .MuiAutocomplete-root {
             opacity: .5;
@@ -95,7 +109,7 @@ body {
     }
     .img-circle {
         border-radius: 50%;
-        border: 3px solid rgba(#1f2220, .25);
+        border: 3px solid $orange;
     }
     .img-tiny {
         width: 2rem;
@@ -139,19 +153,18 @@ body {
     .box-shadow-1 {
         box-shadow: 2px 2px 6px rgba(54, 54, 54, .2);
     }
-    
     .text-shadow {
         text-shadow: 1px 1px 0 lighten($mainColor, 5%);
     }
-    
     .text-shadow-white {
         text-shadow: 1px 1px 0 white;
     }
-    
+    .text-shadow-dark {
+        text-shadow: 1px 1px 0 rgba(darken($mainColor, 20%), .75);
+    }
     .checkbox {
         display: none;
     }
-    
     .slider {
         width: 60px;
         height: 30px;
@@ -176,29 +189,33 @@ body {
             box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
         }
     }
-    
     .checkbox:checked ~ .slider::before {
         transform: translateX(30px);
         box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
     }
-    
     .checkbox:checked ~ .slider {
         background-color: #2196F3;
     }
-    
     .checkbox:active ~ .slider::before {
         transform: translate(0);
     }
-
     .datatable-container {
         header {
             padding: 0;
         }
-        header, nav, .rdt_TableHeader, .rdt_Table, .rdt_TableRow {
+        header, 
+        nav, 
+        .rdt_TableHeader, 
+        .rdt_Table, 
+        .rdt_TableHeadRow, 
+        .rdt_TableRow, 
+        .MuiPaper-root, 
+        .MuiToolbar-root, 
+        .MuiTableContainer-root,
+        .MuiTableRow-root {
             background-color: transparent !important;
         }
     }
-
     .dashboard-stat {
         .dashboard-stat-icon {
             font-size: 5rem;
@@ -214,7 +231,6 @@ body {
             background-color: #0a54ab;
         }
     }
-
     .dropzone {
         border-radius: .425rem;
         border: 2px dashed rgba(34, 34, 34, .2);
@@ -222,15 +238,12 @@ body {
             border: 2px dashed rgb(27, 130, 190, 1);
         }
     }
-
     .text-green {
         color: $mainColor;
     }
-
     .MuiAutocomplete-listbox {
         z-index: 10000;
     }
-    
     .MuiModal-backdrop {
         background-color: rgba(54, 54, 54, .3);
     }
@@ -259,7 +272,6 @@ body {
         z-index: 11000;
     }
 }
-
 #loading {
     .logo {
         width: 3rem;
@@ -277,7 +289,6 @@ body {
         animation: spin 1s infinite linear;
     }
 }
-
 #logo {
     .image {
         padding: .75rem;
@@ -310,4 +321,5 @@ body {
         }
     }
 }
+@import 'media'
 
